# CSM

./: .gitignore  .pre-commit-config.yaml  compare_models.py  main.py  notes_rh.md  pyproject.toml  readme.md
csm/: __init__.py  csm.py  run.py  util.py
csm/model/: _base.py  empirical_2020.py  empirical_2024_offshore.py  empirical_2024_onshore.py  empirical_2030.py  replicate_2015.py  replicate_2015_excel.py
example/: csm_example.ipynb  turbine_config_csm_sweep_1_bearing.csv  turbine_config_csm_sweep_2_bearings.csv  turbine_config_sweep_1_bearing.py  turbine_config_sweep_2_bearings.py
input/: config.yaml
test/: conftest.py  test_csm.py  test_run.py  test_util.py
test/input/: config.yaml
test/model/: test_model.py
