[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "CSM"
dynamic = ["version"]
authors = [{ name = "Paul Crook", email = "paul.crook@nrel.gov" }]
readme = { file = "README.md", content-type = "text/markdown" }
description = "Wind Turbine Cost and Scaling Model Relationships"
requires-python = ">=3.12"
# license = { file = "LICENSE" }
dependencies = [
  "attrs>=23",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6",
  "tqdm>=4",
  "openpyxl>=3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["csm"]
exclude = ["*.test", "*.test.*", "test.*", "test"]

[tool.setuptools.dynamic]
version = { attr = "csm.__version__" }

[tool.isort]
skip = []
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_third_party = ["attrs", "numpy", "pandas"]
# known_first_party = "wombat"
known_local_folder = "test"
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
length_sort = true
lines_after_imports = 2
line_length = 88


[tool.ruff]
src = ["csm"]
cache-dir = "./.cache/ruff"
line-length = 88
target-version = "py39"
fix = false

[tool.ruff.lint]
# See https://github.com/charliermarsh/ruff#supported-rules
# for rules included and matching to prefix.
ignore-init-module-imports = true

# Exclude a variety of commonly ignored directories.
exclude = [
  ".cache",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".nox",
  ".pants.d",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]


[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
exclude = ["csm/model"]
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
cache_dir = ".cache/mypy/"

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
addopts = "--cov=csm --cov-report term-missing"

[tool.coverage.run]
omit = ["./csm/model/*"]
data_file = "./.cache/coverage.sqlite"
